apps/hello-devops/hello-devops-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-devops
  namespace: default
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: hello-devops
  type: ClusterIP
