apps/hello-devops/hello-devops-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-devops-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-devops
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app: traefik
    ports:
    - protocol: TCP
      port: 8000
